# netspeed-cli

./: .gitignore  LICENSE  README.md
js/: package-lock.json  package.json
py/: netspeed.py  pyproject.toml  setup.py
py/netspeed/: __init__.py
py/netspeed.egg-info/: PKG-INFO  SOURCES.txt
py/netspeed_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
