[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netspeed-test"
version = "1.0.0"
description = "Internet speed test CLI tool"
authors = [{name = "Preeyananda Soram"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests",
    "colorama",
]

[project.scripts]
netspeed = "netspeed:main"

[project.urls]
Homepage = "https://github.com/PreeyanandaSoram/netspeed-test-cli"
